--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "busboy": "^0.2.13",
     "cors": "^2.7.1",
     "express": "^4.14.0",
-    "massive": "^2.4.0"
+    "express-fileupload": "0.0.5",
+    "massive": "^2.4.0",
+    "multer": "^1.2.0"
   }
 }
